[tool.poetry]
name = "virtual-prosumer"
version = "0.1.0"
description = "A virtual energy prosumer for testing and evaluating the performance of MGEMS Server."
authors = ["Rithvik Nishad <rithvikn2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
django-environ = "^0.8.1"
django-filter = "^21.1"
paho-mqtt = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
